Enforce AR currency matching
